// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge with additional props correctly applies the theme context className 1`] = `
<Badge
  icon={null}
  intent="default"
  isReversed={false}
  size="small"
  text="Test value"
>
  <span
    className="badge small default orion-fusion-theme"
  >
    <span
      aria-hidden="true"
      className="text"
    >
      Test value
    </span>
  </span>
</Badge>
`;

exports[`should render a badge component in the order, icon and text with medium size 1`] = `
<span
  className="badge has-icon medium default"
>
  <img
    alt="Test icon"
  />
  <span
    aria-hidden="true"
    className="text"
  >
    Test value
  </span>
</span>
`;

exports[`should render a badge component in the order, text and icon with info intent 1`] = `
<span
  className="badge has-icon is-reversed small info"
>
  <span
    aria-hidden="true"
    className="text"
  >
    Test value
  </span>
  <img
    alt="Test icon"
  />
</span>
`;

exports[`should render a badge component with icon and medium size 1`] = `
<span
  className="badge has-icon medium default"
>
  <img
    alt="Test icon"
  />
</span>
`;

exports[`should render a badge component with icon and warning intent 1`] = `
<span
  className="badge has-icon small warning"
>
  <img
    alt="Test icon"
  />
</span>
`;

exports[`should render a badge component with text and large size 1`] = `
<span
  className="badge large default"
>
  <span
    aria-hidden="true"
    className="text"
  >
    Large
  </span>
</span>
`;

exports[`should render a badge component with text and secondary intent 1`] = `
<span
  className="badge small secondary"
>
  <span
    aria-hidden="true"
    className="text"
  >
    Secondary
  </span>
</span>
`;

exports[`should render a badge component with visually hidden text 1`] = `
<span
  className="badge small default"
>
  <VisuallyHiddenText
    text="Risk Score 3"
  />
  <span
    aria-hidden="true"
    className="text"
  >
    3
  </span>
</span>
`;

exports[`should render a default component with nothing 1`] = `
<span
  className="badge small default"
/>
`;
